[package]
name = "hello_server"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~1.4", features = ["unstable", "attributes"] }
chrono = "~0.4"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
