[package]
name = "hello_server"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nohash-hasher = "^0.1"
#chrono = "^0.4"

[dependencies.mio]
version = "^0.7.0-a"
features = ["tcp", "os-poll"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
